--- a/style.css
+++ b/style.css
@@ -41,6 +41,31 @@ nav .header-logo{
     color:#5f6368;
 }
 
+[data-title]:hover:after {
+    opacity: 1;
+    transition: all 0.1s ease 0.5s;
+    visibility: visible;
+  }
+  [data-title]:after {
+    content: attr(data-title);
+    position: absolute;
+    bottom: 0.5em;
+    left: 100%;
+    font-size:11px;
+    padding: 8px 5px 8px 8px;
+    color: #fff;
+    background: #111010;
+    white-space: nowrap;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    border-radius: 5px;
+    opacity: 0.8;
+    z-index: 99999;
+    visibility: hidden;
+  }
+  [data-title] {
+    position: relative;
+  }
 .left button:hover{
     color: #5f6368;
     fill: #5f6368;
@@ -62,8 +87,7 @@ nav .header-logo{
     align-items: center;
     width:50%;
     padding:8px 0;
-    text-align: right;
-    justify-content: right;
+    justify-content:flex-end;
 }
 .right #plus{
     width:47px;
